--- a/OJT-team3/requirements.txt
+++ b/OJT-team3/requirements.txt
@@ -79,6 +79,9 @@ tensorflow
 thinc==8.2.5
 threadpoolctl==3.1.0
 tokenizers==0.19.1
+torch
+torchaudio
+torchvision
 transformers==4.44.2
 typing-extensions==4.12.2
 gunicorn==20.1.0
