--- a/OJT-team3/requirements.txt
+++ b/OJT-team3/requirements.txt
@@ -1,110 +1,65 @@
 absl-py==2.1.0
-annotated-types==0.7.0
 asgiref==3.8.1
 asttokens==2.4.1
 astunparse==1.6.3
-bleach==6.1.0
-blinker==1.8.2
-blis==0.7.11
 cart==1.2.2
-catalogue==2.0.10
 certifi==2023.7.22
 charset-normalizer==3.2.0
-click==8.1.7
 cloudpathlib==0.19.0
-comm==0.2.2
-confection==0.1.5
-contourpy==1.3.0
-cycler==0.12.1
 cymem==2.0.8
 debugpy==1.8.0
-decorator==5.1.1
 dj-database-url==2.1.0
 Django==4.2.16
 django-extensions==3.2.3
 django-js-asset==2.1.0
 djangorestframework==3.15.2
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
-exceptiongroup==1.2.2
-executing==2.1.0
-filelock==3.16.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 Flask==3.0.0
-flatbuffers==24.3.25
-fonttools==4.54.1
-fsspec==2024.9.0
 gast==0.6.0
-geographiclib==2.0
 geopy==2.4.1
-google-pasta==0.2.0
-grpcio==1.66.1
-gunicorn==20.1.0
 h5py==3.11.0
 huggingface-hub==0.24.6
 idna==3.4
 ipykernel==6.27.1
 ipython==8.18.1
 itsdangerous==2.1.2
-jedi==0.19.1
 Jinja2==3.1.2
 joblib==1.3.1
 jupyter_client==8.6.0
 jupyter_core==5.5.0
 kaggle==1.6.17
-keras==3.5.0
-kiwisolver==1.4.7
+keras
 langcodes==3.4.0
 language_data==1.2.0
-libclang==18.1.1
-lxml==5.3.0
-marisa-trie==1.2.0
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.0
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-ml-dtypes==0.4.1
-mpmath==1.3.0
-murmurhash==1.0.10
+ml-dtypes
 namex==0.0.8
-nest-asyncio==1.6.0
 networkx==3.3
 numpy==1.24.0
 opencv-python==4.10.0.84
 opt-einsum==3.3.0
-optree==0.12.1
 packaging==23.2
 pandas==2.0.3
 parso==0.8.3
-pexpect==4.9.0
 Pillow==10.0.0
 platformdirs==4.0.0
-preshed==3.0.9
 prompt-toolkit==3.0.41
-protobuf==4.25.5
 psutil==5.9.6
 psycopg2==2.9.7
-ptyprocess==0.7.0
 pure-eval==0.2.2
-pycryptodome==3.20.0
 pydantic==2.9.1
 pydantic_core==2.23.3
-Pygments==2.18.0
 PyMuPDF==1.24.10
 PyMuPDFb==1.24.10
-pyparsing==3.1.4
 PyPDF2==3.0.1
-python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-docx==1.1.0
 python-dotenv==1.0.0
-python-slugify==8.0.4
-pytz==2024.2
-PyYAML==6.0.2
-pyzmq==26.2.0
 regex==2024.7.24
 requests==2.31.0
-rich==13.8.1
 safetensors==0.4.5
 scikit-learn==1.2.2
 scipy==1.11.1
@@ -116,31 +71,18 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SpeechRecognition==3.10.4
 sqlparse==0.5.1
-srsly==2.4.8
 stack-data==0.6.3
 sympy==1.13.2
 tailor==0.1
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==2.4.0
-text-unidecode==1.3
+tensorboard-data-server
+tensorflow
 thinc==8.2.5
 threadpoolctl==3.1.0
 tokenizers==0.19.1
-tornado==6.4.1
-tqdm==4.66.5
-traitlets==5.14.3
 transformers==4.44.2
-typer==0.12.5
-typing_extensions==4.12.2
-tzdata==2024.2
+typing-extensions==4.12.2
+gunicorn==20.1.0
 urllib3==2.0.4
-wasabi==1.1.3
-wcwidth==0.2.13
 weasel==0.4.1
-webencodings==0.5.1
 Werkzeug==3.0.1
 whitenoise==6.5.0
-wrapt==1.16.0
